--- a/index.html
+++ b/index.html
@@ -11,16 +11,34 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
+        body { overflow-x: hidden; }
         .list-subtugas { max-height: 1000px; transition: all 0.5s ease-in-out; overflow: hidden; }
         .list-subtugas.collapsed { max-height: 0; margin: 0 !important; padding: 0 !important; }
-        #login-overlay { backdrop-filter: blur(5px); }
+        #login-overlay, #custom-alert-overlay { backdrop-filter: blur(5px); }
+        .custom-alert { transform: scale(0.95); opacity: 0; transition: all 0.2s ease-out; }
+        .custom-alert.visible { transform: scale(1); opacity: 1; }
     </style>
 </head>
 
 <body class="bg-slate-100 font-sans text-slate-800">
 
-    <div id="login-overlay" class="fixed inset-0 bg-slate-900 bg-opacity-50 flex items-center justify-center z-50">
-        <div class="bg-white w-full max-w-sm p-8 rounded-xl shadow-2xl text-center">
+    <!-- ==== NOTIFIKASI/ALERT CUSTOM ==== -->
+    <div id="custom-alert-overlay" class="fixed inset-0 bg-slate-900 bg-opacity-50 flex items-center justify-center z-50 hidden">
+        <div id="custom-alert-box" class="custom-alert bg-white w-full max-w-sm p-6 rounded-xl shadow-2xl text-center">
+            <h3 id="custom-alert-title" class="text-xl font-bold mb-4">Notifikasi</h3>
+            <p id="custom-alert-message" class="text-slate-600 mb-6">Ini adalah pesan notifikasi.</p>
+            <div id="custom-prompt-input-container" class="mb-4"></div>
+            <div id="custom-alert-buttons" class="flex gap-4 justify-center">
+                 <button id="custom-alert-ok" class="w-full bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg transition-colors">OK</button>
+            </div>
+        </div>
+    </div>
+
+
+    <!-- ==== LAYAR LOGIN ==== -->
+    <div id="login-overlay" class="fixed inset-0 bg-slate-900 bg-opacity-50 flex items-center justify-center z-40 p-4">
+        <!-- PERBAIKAN: Padding diubah agar lebih pas di HP kecil -->
+        <div class="bg-white w-full max-w-sm p-6 sm:p-8 rounded-xl shadow-2xl text-center">
             <h2 class="text-2xl font-bold mb-6">Login atau Daftar</h2>
             <div class="space-y-4">
                 <input type="email" id="input-email" placeholder="Email" autocomplete="email" class="w-full bg-slate-100 border border-slate-300 rounded-lg px-4 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500">
@@ -43,19 +61,37 @@
         </div>
     </div>
 
+    <!-- ==== KONTEN APLIKASI UTAMA ==== -->
     <div id="app-container" class="container mx-auto max-w-4xl p-4 md:p-8 hidden">
+        
+        <!-- ================================== -->
+        <!-- ==== HEADER YANG DIPERBARUI ==== -->
+        <!-- ================================== -->
         <header class="mb-8">
-            <div class="flex justify-between items-center text-center">
-                <button id="tombol-logout" class="bg-red-500 hover:bg-red-600 text-white font-bold py-1 px-3 rounded-lg text-sm">Logout</button>
-                <div class="flex-grow">
-                    <h1 id="nama-user" class="text-3xl md:text-4xl font-bold text-slate-900">Memuat...</h1>
+            <div class="flex flex-wrap justify-between items-center gap-y-4">
+                <!-- Bagian Kiri (Logout) -->
+                <div class="w-1/2 md:w-1/5 order-1">
+                    <button id="tombol-logout" class="bg-red-500 hover:bg-red-600 text-white font-bold py-1 px-3 rounded-lg text-sm">Logout</button>
+                </div>
+
+                <!-- Spacer Kosong di Kanan (untuk mobile) -->
+                <div class="w-1/2 md:hidden order-2"></div>
+
+                <!-- Bagian Tengah (Nama & Tanggal) -->
+                <div class="w-full md:w-auto order-3 md:order-2 text-center">
+                    <div class="flex items-center justify-center gap-2">
+                        <h1 id="nama-user" class="text-2xl sm:text-3xl md:text-4xl font-bold text-slate-900 truncate">Memuat...</h1>
+                        <button id="tombol-edit-nama" title="Ubah Nama Tampilan" class="text-xl text-slate-400 hover:text-blue-600 p-1 rounded-full transition-colors">✏️</button>
+                    </div>
                     <div class="flex items-center justify-center gap-4 mt-2">
                         <button id="tombol-hari-sebelumnya" class="text-2xl hover:text-blue-600 transition-colors p-2 rounded-full">◄</button>
-                        <p id="tanggal-hari-ini" class="text-slate-500 text-lg font-semibold"></p>
+                        <p id="tanggal-hari-ini" class="text-slate-500 text-base sm:text-lg font-semibold"></p>
                         <button id="tombol-hari-berikutnya" class="text-2xl hover:text-blue-600 transition-colors p-2 rounded-full">►</button>
                     </div>
                 </div>
-                <div class="w-16"></div> 
+
+                <!-- Spacer di Kanan (untuk desktop) -->
+                <div class="hidden md:block md:w-1/5 order-3"></div>
             </div>
         </header>
 
@@ -73,7 +109,7 @@
                         <h3 class="font-bold text-lg text-slate-900">Tambah Kegiatan Baru</h3>
                         <div class="grid grid-cols-2 gap-4">
                             <input type="text" id="input-kegiatan" placeholder="Nama kegiatan" class="col-span-2 bg-slate-100 border border-slate-300 rounded-lg px-4 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500">
-                            <input type="text" id="input-waktu" placeholder="Waktu mulai (opsional)" class="bg-slate-100 border border-slate-300 rounded-lg px-4 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500">
+                            <input type="time" id="input-waktu" class="bg-slate-100 border border-slate-300 rounded-lg px-4 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500">
                             <select id="input-kategori" class="bg-slate-100 border border-slate-300 rounded-lg px-4 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500">
                                 <option>Pekerjaan</option> <option>Belajar</option> <option>Pribadi</option> <option>Istirahat</option> <option>Lainnya</option>
                             </select>
@@ -99,7 +135,10 @@
                 </div>
                 <div class="bg-white p-6 rounded-xl shadow-sm md:col-span-1">
                     <h2 class="text-xl font-bold text-slate-900 mb-4">Utilitas Teks</h2>
-                    <div class="flex flex-wrap gap-2"> <button id="tombol-generate-teks" class="bg-slate-600 hover:bg-slate-700 text-white font-bold py-2 px-4 rounded-lg">Jadikan Teks & Salin</button> </div>
+                    <div class="flex flex-wrap gap-2">
+                        <button id="tombol-generate-teks" class="bg-slate-600 hover:bg-slate-700 text-white font-bold py-2 px-4 rounded-lg">Jadikan Teks</button>
+                        <button id="tombol-salin-teks" class="bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-2 px-4 rounded-lg">Salin Teks</button>
+                    </div>
                     <textarea id="hasil-teks" rows="8" placeholder="Hasil teks akan muncul di sini..." class="mt-4 w-full bg-slate-100 border border-slate-300 rounded-lg p-3"></textarea>
                 </div>
             </div>
