--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Activity Logger Pro</title>
+    <title>Activity Logger Chx</title>
     <link rel="manifest" href="manifest.json">
     <link rel="icon" type="image/png" href="images/icon-192.png">
     <meta name="theme-color" content="#3b82f6">
@@ -12,8 +12,8 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
         body { overflow-x: hidden; }
-        .list-subtugas { max-height: 1000px; transition: all 0.5s ease-in-out; overflow: hidden; }
-        .list-subtugas.collapsed { max-height: 0; margin: 0 !important; padding: 0 !important; }
+        .list-subtugas, .sub-projects-container { max-height: 1000px; transition: all 0.5s ease-in-out; overflow: hidden; }
+        .list-subtugas.collapsed, .sub-projects-container.collapsed { max-height: 0; margin: 0 !important; padding: 0 !important; }
         #login-overlay, #custom-alert-overlay { backdrop-filter: blur(5px); }
         .custom-alert { transform: scale(0.95); opacity: 0; transition: all 0.2s ease-out; }
         .custom-alert.visible { transform: scale(1); opacity: 1; }
@@ -23,7 +23,7 @@
 <body class="bg-slate-100 font-sans text-slate-800">
 
     <!-- ==== NOTIFIKASI/ALERT CUSTOM ==== -->
-    <div id="custom-alert-overlay" class="fixed inset-0 bg-slate-900 bg-opacity-50 flex items-center justify-center z-50 hidden">
+    <div id="custom-alert-overlay" class="fixed inset-0 bg-slate-900 bg-opacity-50 flex items-center justify-center z-50 hidden p-4">
         <div id="custom-alert-box" class="custom-alert bg-white w-full max-w-sm p-6 rounded-xl shadow-2xl text-center">
             <h3 id="custom-alert-title" class="text-xl font-bold mb-4">Notifikasi</h3>
             <p id="custom-alert-message" class="text-slate-600 mb-6">Ini adalah pesan notifikasi.</p>
@@ -37,7 +37,6 @@
 
     <!-- ==== LAYAR LOGIN ==== -->
     <div id="login-overlay" class="fixed inset-0 bg-slate-900 bg-opacity-50 flex items-center justify-center z-40 p-4">
-        <!-- PERBAIKAN: Padding diubah agar lebih pas di HP kecil -->
         <div class="bg-white w-full max-w-sm p-6 sm:p-8 rounded-xl shadow-2xl text-center">
             <h2 class="text-2xl font-bold mb-6">Login atau Daftar</h2>
             <div class="space-y-4">
@@ -63,21 +62,10 @@
 
     <!-- ==== KONTEN APLIKASI UTAMA ==== -->
     <div id="app-container" class="container mx-auto max-w-4xl p-4 md:p-8 hidden">
-        
-        <!-- ================================== -->
-        <!-- ==== HEADER YANG DIPERBARUI ==== -->
-        <!-- ================================== -->
         <header class="mb-8">
             <div class="flex flex-wrap justify-between items-center gap-y-4">
-                <!-- Bagian Kiri (Logout) -->
-                <div class="w-1/2 md:w-1/5 order-1">
-                    <button id="tombol-logout" class="bg-red-500 hover:bg-red-600 text-white font-bold py-1 px-3 rounded-lg text-sm">Logout</button>
-                </div>
-
-                <!-- Spacer Kosong di Kanan (untuk mobile) -->
+                <div class="w-1/2 md:w-1/5 order-1"><button id="tombol-logout" class="bg-red-500 hover:bg-red-600 text-white font-bold py-1 px-3 rounded-lg text-sm">Logout</button></div>
                 <div class="w-1/2 md:hidden order-2"></div>
-
-                <!-- Bagian Tengah (Nama & Tanggal) -->
                 <div class="w-full md:w-auto order-3 md:order-2 text-center">
                     <div class="flex items-center justify-center gap-2">
                         <h1 id="nama-user" class="text-2xl sm:text-3xl md:text-4xl font-bold text-slate-900 truncate">Memuat...</h1>
@@ -89,8 +77,6 @@
                         <button id="tombol-hari-berikutnya" class="text-2xl hover:text-blue-600 transition-colors p-2 rounded-full">►</button>
                     </div>
                 </div>
-
-                <!-- Spacer di Kanan (untuk desktop) -->
                 <div class="hidden md:block md:w-1/5 order-3"></div>
             </div>
         </header>
@@ -98,34 +84,36 @@
         <main class="space-y-8">
             <div class="bg-white p-6 rounded-xl shadow-sm">
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-                    <div class="space-y-2">
-                        <h3 class="font-bold text-lg text-slate-900">Buat Proyek Baru</h3>
-                        <div class="flex gap-2">
-                            <input type="text" id="input-proyek" placeholder="Nama Proyek" class="flex-grow w-full bg-slate-100 border border-slate-300 rounded-lg px-4 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500">
-                            <button id="tombol-tambah-proyek" class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg transition-colors">Tambah</button>
-                        </div>
+                    <div class="space-y-4">
+                        <h3 class="font-bold text-lg text-slate-900">Buat Proyek / Sub-Proyek</h3>
+                        <input type="text" id="input-proyek" placeholder="Nama Proyek Baru" class="w-full bg-slate-100 border border-slate-300 rounded-lg px-4 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500">
+                        <select id="pilih-proyek-induk" class="w-full bg-slate-100 border border-slate-300 rounded-lg px-4 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500">
+                            <option value="none">-- Jadikan Proyek Utama (Tanpa Induk) --</option>
+                        </select>
+                        <button id="tombol-tambah-proyek" class="w-full bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg transition-colors">Tambah Proyek</button>
                     </div>
-                    <div class="space-y-2">
+                    <div class="space-y-4">
                         <h3 class="font-bold text-lg text-slate-900">Tambah Kegiatan Baru</h3>
+                        <input type="text" id="input-kegiatan" placeholder="Nama kegiatan" class="w-full bg-slate-100 border border-slate-300 rounded-lg px-4 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500">
                         <div class="grid grid-cols-2 gap-4">
-                            <input type="text" id="input-kegiatan" placeholder="Nama kegiatan" class="col-span-2 bg-slate-100 border border-slate-300 rounded-lg px-4 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500">
                             <input type="time" id="input-waktu" class="bg-slate-100 border border-slate-300 rounded-lg px-4 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500">
                             <select id="input-kategori" class="bg-slate-100 border border-slate-300 rounded-lg px-4 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500">
                                 <option>Pekerjaan</option> <option>Belajar</option> <option>Pribadi</option> <option>Istirahat</option> <option>Lainnya</option>
                             </select>
-                            <select id="pilih-proyek" class="col-span-2 bg-slate-100 border border-slate-300 rounded-lg px-4 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500">
-                                <option value="none">-- Tanpa Proyek --</option>
-                            </select>
-                            <button id="tombol-tambah" class="col-span-2 bg-green-600 hover:bg-green-700 text-white font-bold py-2 px-4 rounded-lg transition-colors">Tambah Kegiatan</button>
                         </div>
+                        <select id="pilih-proyek-kegiatan" class="w-full bg-slate-100 border border-slate-300 rounded-lg px-4 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500">
+                            <option value="none">-- Tanpa Proyek --</option>
+                        </select>
+                        <button id="tombol-tambah" class="w-full bg-green-600 hover:bg-green-700 text-white font-bold py-2 px-4 rounded-lg transition-colors">Tambah Kegiatan</button>
                     </div>
                 </div>
             </div>
             <div id="daftar-utama-container" class="space-y-4">
-                <h2 class="text-2xl font-bold text-slate-900">Daftar Kegiatan & Proyek</h2>
+                <h2 class="text-2xl font-bold text-slate-900">Daftar Proyek & Kegiatan</h2>
                 <div id="loading" class="text-center py-8"> <p class="text-slate-500">Menyambungkan ke database...</p> </div>
-                <div id="pesan-kosong" class="hidden text-center py-8 bg-white rounded-xl shadow-sm"> <p class="text-slate-500">Tidak ada kegiatan untuk tanggal ini. Ayo mulai!</p> </div>
-                <ul id="daftar-kegiatan" class="space-y-3"> </ul>
+                <div id="pesan-kosong" class="hidden text-center py-8 bg-white rounded-xl shadow-sm"> <p class="text-slate-500">Tidak ada proyek atau kegiatan untuk tanggal ini.</p> </div>
+                <div id="daftar-proyek-container" class="space-y-3"></div>
+                <ul id="daftar-kegiatan-lain" class="space-y-3"></ul>
             </div>
             <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
                 <div class="bg-white p-6 rounded-xl shadow-sm md:col-span-1">
