--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
         body {
             overflow-x: hidden;
         }
-        /* ... sisa style Anda ... */
         .list-subtugas,
         .sub-projects-container {
             max-height: 1000px;
@@ -182,7 +181,7 @@
                     <p class="text-slate-500 dark:text-slate-400">Menyambungkan ke database...</p>
                 </div>
                 <div id="pesan-kosong" class="hidden text-center py-8 bg-white dark:bg-slate-800 rounded-xl shadow-sm">
-                    <p class="text-slate-500 dark:text-slate-400">Tidak ada proyek atau kegiatan untuk tanggal ini.</p>
+                    <p class="text-slate-500 dark:text-slate-400">Tidak ada proyek atau kegiatan untuk ditampilkan.</p>
                 </div>
                 <div id="daftar-proyek-container" class="space-y-3"></div>
                 <ul id="daftar-kegiatan-lain" class="space-y-3"></ul>
